std-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: std-ingress
spec:
  rules:
  - host: "std-pred.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: std-service
            port:
              number: 80
